diploma-app-chart/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: diploma-app-ingress
  namespace: diploma-project
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: diploma-app-diploma-app-chart
            port:
              number: 80
